exercise2.09/manifests/namespace.yaml
  
kind: Namespace
apiVersion: v1
metadata:
  name: project
  labels:
    name: project
